# table_transformer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  notes.md  pyproject.toml  transformer.py
api/: app.py
data/: main_data.csv  test_input.csv
docker/: Dockerfile  docker-compose.yml
scripts/: fetch_gs.py  gs_transformer.py  local_transformer.py  transform_to_postgis.py  upload_to_arcgis.py
tests/: conftest.py  test_api.py  test_arcgis.py  test_fetch_gs.py  test_transform.py
utils/: arcgis_rest.py  gsheets_reader.py
